--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-use-downloader": "^1.2.4"
+    "react-use-downloader": "^1.2.4",
+    "useref": "^1.4.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
